--- a/.github/workflows/validate_hacs.yml
+++ b/.github/workflows/validate_hacs.yml
@@ -1,27 +1,31 @@
-name: Validate HACS  
-  
-on:  
-  push:  
-    paths:  
-      - "custom_components/**"  
-      - ".github/workflows/validate_hacs.yml"  
-  pull_request:  
-    paths:  
-      - "custom_components/**"  
-      - ".github/workflows/validate_hacs.yml"  
-  
-jobs:  
-  hacs:  
-    name: HACS Validation  
-    runs-on: ubuntu-latest  
-  
-    steps:  
-      # Clona il repository  
-      - name: Checkout code  
-        uses: actions/checkout@v4  
-  
-      # Esegue la validazione HACS  
-      - name: HACS validate  
-        uses: hacs/action@main        # oppure @v2 quando verrà taggata  
-        with:  
-          category: integration       # integration | plugin | theme | appdaemon  
+Pin actions/checkout and actions/setup-python to full commit SHAs for securityname: Validate HACS
+
+on:
+  push:
+    paths:
+      - 'custom_components/**'
+      - '.github/workflows/validate_hacs.yml'
+  pull_request:
+    paths:
+      - 'custom_components/**'
+      - '.github/workflows/validate_hacs.yml'
+
+jobs:
+  hacs:
+    name: HACS Validation
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@b80ff79f1755d06ba70441c368a6fe801f5f3a62
+
+      - name: Set up Python
+        uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c
+        with:
+          python-version: 3.10
+
+      - name: Install requirements
+        run: |
+          pip install -r https://raw.githubusercontent.com/hacs/action/main/requirements.txt
+
+      - name: Run HACS validation
+        run: hacs validate
