--- a/.github/workflows/validate_hacs.yml
+++ b/.github/workflows/validate_hacs.yml
@@ -1,4 +1,3 @@
-# Pin actions/checkout and actions/setup-python to full commit SHAs for security
 name: Validate HACS
 
 on:
@@ -14,7 +13,7 @@ on:
 jobs:
   hacs:
     name: HACS Validation
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
         uses: actions/checkout@b80ff79f1755d06ba70441c368a6fe801f5f3a62
@@ -24,9 +23,8 @@ jobs:
         with:
           python-version: '3.10.14'
 
-      - name: Install requirements
-        run: |
-          pip install -r https://raw.githubusercontent.com/hacs/action/main/requirements.txt
+      - name: Install HACS
+        run: pip install hacs
 
       - name: Run HACS validation
         run: hacs validate
